@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3551] Fix: The configuration registry needs to make sure the configuration is loaded in the FE
 - [#3537] Feature: Feature: Add tx_oelib_DataMapper::cacheModelByCombinedKeys
 - [#2469] Feature: Allow additional keys for models in the mappers
 - [#3524] Fix: VisibilityTree::makeNodesVisible needs to check the existence of nodes
